docs/assets/css/style.scss
---
---

{% include reset.css %}

$codefont: PrintChar21;
$headingfont: AvantGardeGothic-Bold;
$greenapple: #5db316;
$cornerradius: .75em;

@font-face {
  font-family: "PrintChar21";
  src: url("../fonts/PrintChar21.ttf");
}

@font-face {
  font-family: "AvantGardeGothic-Bold";
  src: url("../fonts/itc-avant-garde-gothic_bold.woff");
}

body {
  font-family: Sans-Serif;
  font-size: 1rem;
  background: $greenapple;
}

.container {
  width: 800px;
  max-width: 100%;
  margin: 0 auto;
}

header {
  h1 {
    font-size: 3em;
    margin: 0 0 1rem 0;

    img {
      max-height: 0.8em;
    }
  }

  ul {
    display: inline;
    float: right;
    list-style-type: none;
    margin: 0;
    padding: 0;

    li {
      display: inline;
      margin: .25rem;
    }
  }
}

section {
  padding: 2rem;
  background: white;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $headingfont;
  font-weight: 400;
  margin: 1em 0 .5em 0;
}

h1, h2, h3 {
    text-transform: uppercase;
}

h1 {
  font-size: 2rem;
  color: $greenapple;
}

h2 {
  font-size: 1.5rem;
}

.post-header {
  h1 {
    margin: 0 0 1rem 0;
  }

  h3 {
    margin: 0;
  }
}

img.screenshot {
  max-width: 100%;
  object-fit: auto;
}

header, footer {
  background: $greenapple;
  padding: 2rem;

  a {
    color: white;
    text-decoration: none;
  }
}

.card-layout {
  margin: 2rem 0;
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
}

.card {
  padding: 0;
  margin: 0;
  width: 25%;
  min-width: 150px;

  .card-background {
    position: relative;
    margin: .5rem;
    padding: 0;
    background-color: white;
    border-radius: $cornerradius;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.367);
    
    a {
      text-decoration: none;
    }

    .card-content {
      position: relative;
      margin: .5rem;
    }

    .card-badges {
      margin: .15rem;
      position: absolute;
      bottom: 0;
      display: flex;
      justify-content:flex-start;
      flex-wrap:wrap-reverse;
      
      img {
        padding: .15rem .15rem 0 0;
      }
    }

    .card-tags {
      position: absolute;
      width: 100%;
      aspect-ratio: 1.4583;
    }

    h1 {
      padding: .5rem 0 0 0;
      text-overflow: ellipsis;
      color: black;
      font-size: 1rem;
      height: 2rem;
      overflow: hidden;
    }  

    img.card-thumbnail {
      margin: 0;
      display: block;
      width: 100%;
      image-rendering: pixelated;
      aspect-ratio: 1.4583;
      object-fit: cover;
    }

    p {
      padding: 0;
      margin: 0;
      text-overflow: ellipsis;
      color: black;
      height: 3rem;
      font-size: .75rem;
      overflow: hidden;
    }
  }
}

p {
  line-height: 1.5;
  margin-bottom: 1rem;
}

ul {
  list-style-type: circle;
  list-style-position: outside;
  margin-bottom: 1rem;
  margin-left: 2rem;
}

b, strong {
  font-weight:bold;
}

i, em {
  font-style:italic;
}

a {
  color: $greenapple;
  text-decoration: underline;
  &:hover {
    text-decoration: underline;
  }
}

.bottom-nav {
  display: flex;
  flex-wrap: wrap;
}

.prev-nav {
  margin-left: auto;
  margin-right: 0;
}

.next-nav, .prev-nav {
  color: $greenapple;
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
  margin-top: 1em;
  white-space: nowrap;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid $greenapple;
  margin: 1em 0;
  padding: 0;
}

.inline-post {
  .inline-post-link {
    display: block;
    color: black;
    text-decoration: none;
    &:hover {
      h1, h2 {
        text-decoration: underline;
        color: $greenapple;
      }  
    }
  }

  p {
    margin: 0;
  }

  h1, h2 {
    color: black;
    margin: 0;
  }

  h1 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
  }

  h2 {
    font-size: 1rem;
  }

  .screenshot {
    display: block;
    margin-bottom: 1em;
  }
}

figure {
  text-align: center;
  margin: 2rem 0;

  img {
    max-width: 80%;
    margin-bottom: 1rem;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.367);
  }
}





code, pre {
  color: $greenapple;
  font-size: 14px;
  font-family: PrintChar21;
}

pre {
  white-space: pre-wrap;
  word-break: break-all;
}

/**
 * Codeblock.
 */
pre.highlight {
  position: relative;

  // copy code to clipboard
  .copy {
    font-size: 10px;
    font-family: PrintChar21;
    padding: 5px 15px;
    border-style: solid;
    border-color: #6aa63f;
    border-radius: 10px;
    color: #6aa63f;
    position: absolute;
    right: .5rem;
    top: .5rem;
    opacity: 0;

    &:active,
    &:focus,
    &:hover {
      background: white;
      opacity: 1;
    }
  }

  &:active .copy,
  &:focus .copy,
  &:hover .copy {
    background: white;
    opacity: 1;
  }
}

